k8s/01-deployments.yaml
---
# DEV environment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app-deployment
  namespace: chat-dev
  labels:
    app: chat-app
    env: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-app
      env: dev
  template:
    metadata:
      labels:
        app: chat-app
        env: dev
    spec:
      containers:
      - name: chat-app
        image: chat-app:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
---
# PRE-PROD environment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app-deployment
  namespace: chat-pre-prod
  labels:
    app: chat-app
    env: pre-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chat-app
      env: pre-prod
  template:
    metadata:
      labels:
        app: chat-app
        env: pre-prod
    spec:
      containers:
      - name: chat-app
        image: chat-app:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
---
# PROD environment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app-deployment
  namespace: chat-prod
  labels:
    app: chat-app
    env: prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: chat-app
      env: prod
  template:
    metadata:
      labels:
        app: chat-app
        env: prod
    spec:
      containers:
      - name: chat-app
        image: chat-app:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
